Add "Delete Resource" command to context menu
- Registered a new command `kube9.deleteResource` in the command palette and context menu for Kubernetes resources.
- Updated `package.json` to include the new command and its associated conditions for visibility in the tree view.
- Marked the related story as completed, confirming that all acceptance criteria for the delete functionality have been met.

--- a/package.json
+++ b/package.json
@@ -83,6 +83,11 @@
         "category": "Kube9"
       },
       {
+        "command": "kube9.deleteResource",
+        "title": "Delete Resource",
+        "category": "kube9"
+      },
+      {
         "command": "kube9.openDashboard",
         "title": "Open Dashboard",
         "category": "kube9"
@@ -111,6 +116,11 @@
           "command": "kube9.viewResourceYAML",
           "when": "view == kube9ClusterView && viewItem =~ /^resource/",
           "group": "kube9@1"
+        },
+        {
+          "command": "kube9.deleteResource",
+          "when": "view == kube9ClusterView && viewItem =~ /^resource/",
+          "group": "kube9@2"
         }
       ]
     },
