Refactor testing and build scripts; remove outdated issue templates
- Updated package.json to include a TypeScript compilation step and modified test scripts for better organization.
- Removed deprecated issue templates for bug reports and feature requests from the GitHub repository.
- Enhanced the DashboardDataProvider with a mockable kubectl execution function for improved testing flexibility.
- Added new mock classes and interfaces in the test suite to facilitate better simulation of VSCode APIs and improve test coverage.

--- a/package.json
+++ b/package.json
@@ -151,8 +151,11 @@
   "scripts": {
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
-    "pretest": "npm run build && npm run lint",
-    "test": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/{src/test,tests}/**/*.test.js'",
+    "compile": "tsc",
+    "pretest": "npm run compile && npm run lint",
+    "test": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js'",
+    "test:integration": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/tests/**/*.test.js'",
+    "test:all": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/{src/test,tests}/**/*.test.js'",
     "lint": "eslint src --ext ts",
     "prepackage": "npm run build",
     "package": "vsce package"
