Add 'Apply YAML' command to package.json and update related story status
- Registered the command `kube9.applyYAML` in `contributes.commands` with the title "Apply YAML" and category "kube9".
- Added context menu entry for YAML files in the editor, ensuring proper filtering for .yaml and .yml extensions.
- Updated the status of the related story to completed, reflecting fulfillment of acceptance criteria.

--- a/package.json
+++ b/package.json
@@ -91,6 +91,11 @@
         "command": "kube9.openDashboard",
         "title": "Open Dashboard",
         "category": "kube9"
+      },
+      {
+        "command": "kube9.applyYAML",
+        "title": "Apply YAML",
+        "category": "kube9"
       }
     ],
     "menus": {
@@ -121,6 +126,13 @@
           "command": "kube9.deleteResource",
           "when": "view == kube9ClusterView && viewItem =~ /^resource/",
           "group": "kube9@2"
+        }
+      ],
+      "editor/context": [
+        {
+          "command": "kube9.applyYAML",
+          "when": "resourceExtname == .yaml || resourceExtname == .yml",
+          "group": "kube9@1"
         }
       ]
     },
