Update context menu condition for applyYAML command and enhance output visibility
- Changed the condition for the context menu entry in package.json to use 'yaml' and 'yml' without the leading dot for better compatibility.
- Modified the applyYAML command to show the output channel, allowing users to view execution details during the apply process.

--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
       "editor/context": [
         {
           "command": "kube9.applyYAML",
-          "when": "resourceExtname == .yaml || resourceExtname == .yml",
+          "when": "resourceExtname == yaml || resourceExtname == yml",
           "group": "kube9@1"
         }
       ]
