Enhance testing capabilities and CI workflow
- Added a new unit test command in package.json to filter tests with the '@requires-k8s' tag.
- Updated CI workflow to run the new unit test command instead of the general test command for better specificity.
- Modified the ClusterConnectivity test suite name to include the '@requires-k8s' tag for clarity in test categorization.

--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "compile": "tsc",
     "pretest": "npm run compile && npm run lint",
     "test": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js'",
+    "test:unit": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js' --grep '@requires-k8s' --invert",
     "test:integration": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/tests/**/*.test.js'",
     "test:all": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/{src/test,tests}/**/*.test.js'",
     "lint": "eslint src --ext ts",
