--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build
         run: npm run build
       
-      - name: Run tests
-        run: npm test
+      - name: Run unit tests
+        run: npm run test:unit
         continue-on-error: false
 
   build:
