--- a/package.json
+++ b/package.json
@@ -106,6 +106,11 @@
         "category": "kube9"
       },
       {
+        "command": "kube9.scaleWorkload",
+        "title": "Scale",
+        "category": "kube9"
+      },
+      {
         "command": "kube9.openDashboard",
         "title": "Open Dashboard",
         "category": "kube9"
@@ -149,6 +154,11 @@
           "command": "kube9.viewResourceYAML",
           "when": "view == kube9ClusterView && viewItem =~ /^resource/",
           "group": "kube9@2"
+        },
+        {
+          "command": "kube9.scaleWorkload",
+          "when": "view == kube9ClusterView && (viewItem == resource:Deployment || viewItem == resource:StatefulSet || viewItem == resource:ReplicaSet)",
+          "group": "kube9@3"
         },
         {
           "command": "kube9.deleteResource",
