ci: fix publish phase for VSCode marketplace
- Reorder steps to package .vsix before semantic-release
- Re-package .vsix with correct version after semantic-release
- Fix VSCode marketplace publish to use --packagePath
- Update semantic-release config for better .vsix matching
- Add required publishing fields to package.json (author, keywords, bugs, homepage)
- Improve categories and add Kubernetes-themed gallery banner
- Create comprehensive RELEASE.md with pre-publish checklist

[skip ci]

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -24,8 +24,8 @@
       {
         "assets": [
           {
-            "path": "*.vsix",
-            "label": "VSCode Extension"
+            "path": "kube9-*.vsix",
+            "label": "kube9 VSCode Extension"
           }
         ]
       }
