--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,19 +39,23 @@ jobs:
         run: npm run test:unit
         continue-on-error: true
       
-      - name: Package extension
+      - name: Package extension (pre-release)
         run: npm run package
       
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VSCE_PAT: ${{ secrets.VSCE_PAT }}
         run: npx semantic-release
+      
+      - name: Re-package extension (post-release)
+        if: success()
+        run: npm run package
       
       - name: Publish to VS Code Marketplace
         if: success()
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
-        run: npx --yes @vscode/vsce publish --pat $VSCE_PAT
-        continue-on-error: true
+        run: |
+          VSIX_FILE=$(ls kube9-*.vsix | head -1)
+          npx --yes @vscode/vsce publish --packagePath "$VSIX_FILE" --pat $VSCE_PAT
 
