feat: implement describe webview and describe raw editor
- Add shared Describe webview panel for resource descriptions
  - Reuses single panel instance for all describe actions
  - Shows stub content with resource kind/name in title
  - Supports both left-click and right-click context menu

- Add Describe (Raw) command for full kubectl describe output
  - Opens read-only text editor with full describe output
  - Uses custom kube9-describe:// URI scheme
  - Implements DescribeRawFileSystemProvider for document management

- Add describe command utilities
  - describeUtils.ts adds Describe commands to describable tree items
  - Supports deployments, pods, services, configmaps, secrets, etc.

- Register commands and file system provider
  - Register kube9.describeResource command
  - Register kube9.describeResourceRaw command
  - Register kube9-describe:// FileSystemProvider

- Update package.json with new commands and context menu items
  - Add Describe and Describe (Raw) to context menu for resources

- Fix build errors
  - Add missing watch() method to DescribeRawFileSystemProvider
  - Fix node type reference in describeUtils (use 'nodes' not 'node')
  - Fix URI creation to use proper path structure

Implements stories:
- 001-implement-describe-webview-stub.story.md
- 002-implement-describe-raw-editor.story.md

--- a/package.json
+++ b/package.json
@@ -81,6 +81,16 @@
         "category": "kube9"
       },
       {
+        "command": "kube9.describeResource",
+        "title": "Describe",
+        "category": "kube9"
+      },
+      {
+        "command": "kube9.describeResourceRaw",
+        "title": "Describe (Raw)",
+        "category": "kube9"
+      },
+      {
         "command": "kube9.viewResourceYAML",
         "title": "View YAML",
         "category": "Kube9"
@@ -126,14 +136,24 @@
           "group": "namespace@1"
         },
         {
-          "command": "kube9.viewResourceYAML",
+          "command": "kube9.describeResource",
           "when": "view == kube9ClusterView && viewItem =~ /^resource/",
           "group": "kube9@1"
         },
         {
-          "command": "kube9.deleteResource",
+          "command": "kube9.describeResourceRaw",
+          "when": "view == kube9ClusterView && viewItem =~ /^resource/",
+          "group": "kube9@1.5"
+        },
+        {
+          "command": "kube9.viewResourceYAML",
           "when": "view == kube9ClusterView && viewItem =~ /^resource/",
           "group": "kube9@2"
+        },
+        {
+          "command": "kube9.deleteResource",
+          "when": "view == kube9ClusterView && viewItem =~ /^resource/",
+          "group": "kube9@3"
         }
       ],
       "editor/context": [
