feat: register restart workload command
Add kube9.restartWorkload command registration in package.json and
stub handler in extension.ts. Command appears in context menu for
Deployments, StatefulSets, and DaemonSets only.

- Add command definition to package.json contributes.commands
- Add menu contribution with when clause for specific workload types
- Register stub command handler in extension.ts
- Follows existing command registration patterns

Part of workload restart feature implementation.

--- a/package.json
+++ b/package.json
@@ -119,6 +119,11 @@
         "command": "kube9.applyYAML",
         "title": "Apply YAML",
         "category": "kube9"
+      },
+      {
+        "command": "kube9.restartWorkload",
+        "title": "Restart",
+        "category": "Kube9"
       }
     ],
     "menus": {
@@ -158,6 +163,11 @@
         {
           "command": "kube9.scaleWorkload",
           "when": "view == kube9ClusterView && (viewItem == resource:Deployment || viewItem == resource:StatefulSet || viewItem == resource:ReplicaSet)",
+          "group": "kube9@3"
+        },
+        {
+          "command": "kube9.restartWorkload",
+          "when": "view == kube9ClusterView && (viewItem == resource:Deployment || viewItem == resource:StatefulSet || viewItem == resource:DaemonSet)",
           "group": "kube9@3"
         },
         {
