feat: add React webview app structure for ArgoCD application view
- Add React and esbuild dependencies
- Create React entry point and main component
- Implement tab navigation (Overview/Drift Details)
- Add VS Code API integration and state persistence
- Update webview provider to load React bundle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
   "exclude": [
     "node_modules",
     "out",
-    ".vscode-test"
+    ".vscode-test",
+    "src/webview/argocd-application"
   ]
 }
 
