--- a/package.json
+++ b/package.json
@@ -273,9 +273,10 @@
     }
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --mode production && npm run build:webview",
     "watch": "webpack --mode development --watch",
-    "compile": "tsc",
+    "compile": "tsc && npm run build:webview",
+    "build:webview": "esbuild src/webview/argocd-application/index.tsx --bundle --outfile=media/argocd-application/main.js --format=iife --platform=browser --minify",
     "pretest": "npm run compile && npm run lint",
     "test": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js'",
     "pretest:unit": "npm run compile && npm run lint",
@@ -292,10 +293,13 @@
     "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^22.0.0",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.18",
     "@types/vscode": "^1.80.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vscode/vsce": "^2.19.0",
+    "esbuild": "^0.24.0",
     "eslint": "^8.45.0",
     "mocha": "^10.2.0",
     "source-map-support": "^0.5.21",
@@ -312,6 +316,8 @@
   },
   "dependencies": {
     "@kubernetes/client-node": "^1.4.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
