feat: register open terminal command for Pod resources
Add kube9.openTerminal command registration in package.json with context
menu entry for Pod resources. Command appears in kube9@2 group after
Describe actions. This is the first step in implementing Pod terminal
functionality.

Related: #001-register-open-terminal-command

--- a/package.json
+++ b/package.json
@@ -116,6 +116,11 @@
         "category": "kube9"
       },
       {
+        "command": "kube9.openTerminal",
+        "title": "Open Terminal",
+        "category": "kube9"
+      },
+      {
         "command": "kube9.applyYAML",
         "title": "Apply YAML",
         "category": "kube9"
@@ -158,6 +163,11 @@
         {
           "command": "kube9.viewResourceYAML",
           "when": "view == kube9ClusterView && viewItem =~ /^resource/",
+          "group": "kube9@2"
+        },
+        {
+          "command": "kube9.openTerminal",
+          "when": "view == kube9ClusterView && viewItem == resource:Pod",
           "group": "kube9@2"
         },
         {
