feat: register Cluster Manager command
Add kube9.openClusterManager command to package.json and register handler
in extension.ts. Command logs "Cluster Manager opening..." placeholder
message. Webview creation will be implemented in next story.

Refs: 003-register-cluster-manager-command

--- a/package.json
+++ b/package.json
@@ -71,6 +71,11 @@
         "category": "kube9"
       },
       {
+        "command": "kube9.openClusterManager",
+        "title": "Kube9: Cluster Manager",
+        "category": "Kube9"
+      },
+      {
         "command": "kube9.setActiveNamespace",
         "title": "Set as Active Namespace",
         "category": "kube9"
