--- a/package.json
+++ b/package.json
@@ -295,6 +295,10 @@
     "release:dry-run": "semantic-release --dry-run"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.23.0",
+    "@babel/preset-react": "^7.23.0",
+    "@babel/preset-typescript": "^7.23.0",
     "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^22.0.0",
@@ -304,10 +308,15 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vscode/vsce": "^2.19.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
     "esbuild": "^0.24.0",
     "eslint": "^8.45.0",
     "mocha": "^10.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "source-map-support": "^0.5.21",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.5.4",
     "typescript": "^5.1.6",
     "webpack": "^5.102.1",
