--- a/package.json
+++ b/package.json
@@ -299,34 +299,35 @@
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-react": "^7.23.0",
     "@babel/preset-typescript": "^7.23.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/npm": "^13.1.2",
     "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^22.0.0",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^10.0.0",
     "@types/vscode": "^1.80.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vscode/vsce": "^2.19.0",
     "babel-loader": "^9.1.3",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
     "css-loader": "^6.8.1",
     "esbuild": "^0.24.0",
     "eslint": "^8.45.0",
     "mocha": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "semantic-release": "^25.0.2",
     "source-map-support": "^0.5.21",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.4",
     "typescript": "^5.1.6",
     "webpack": "^5.102.1",
-    "webpack-cli": "^6.0.1",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^12.0.2",
-    "@semantic-release/npm": "^13.1.2",
-    "conventional-changelog-conventionalcommits": "^7.0.2",
-    "semantic-release": "^25.0.2"
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
     "@kubernetes/client-node": "^1.4.0",
