feat: add cache statistics debug command
Add VS Code command kube9.showCacheStats to display cache statistics
for debugging and performance monitoring. Includes cache entry count,
size estimation, and resource type grouping.

- Add size(), totalSize(), and keys() methods to ResourceCache
- Create cacheStats command handler with formatted output
- Register command in extension and package.json
- Add unit tests for new cache methods

Implements story 013-add-cache-stats-command

--- a/package.json
+++ b/package.json
@@ -164,6 +164,11 @@
         "command": "kube9.argocd.copyNamespace",
         "title": "Copy Namespace",
         "category": "kube9"
+      },
+      {
+        "command": "kube9.showCacheStats",
+        "title": "Show Cache Statistics",
+        "category": "kube9"
       }
     ],
     "menus": {
