feat: add operator namespace settings schema
Add kube9.operatorNamespace configuration to package.json supporting
both string (all clusters) and object (per-cluster) types. This setting
provides fallback configuration when auto-detection fails or as override.

The setting defaults to null to prefer auto-detection from ConfigMap,
with clear documentation and examples in the markdown description.

--- a/package.json
+++ b/package.json
@@ -371,6 +371,11 @@
           "default": false,
           "description": "Enable debug logging",
           "scope": "application"
+        },
+        "kube9.operatorNamespace": {
+          "type": ["string", "object"],
+          "default": null,
+          "markdownDescription": "Custom namespace for kube9-operator. Leave empty for auto-detection.\n\n**String example** (applies to all clusters):\n```json\n\"kube9.operatorNamespace\": \"my-kube9\"\n```\n\n**Object example** (per-cluster):\n```json\n\"kube9.operatorNamespace\": {\n  \"production\": \"kube9-prod\",\n  \"staging\": \"kube9-staging\"\n}\n```"
         }
       }
     }
