chore: setup react build configuration for events viewer webview
- Add react-window and @types/react-window dependencies
- Update build:webview script to include event-viewer build
- Follow existing esbuild pattern from argocd-application webview

--- a/package.json
+++ b/package.json
@@ -389,7 +389,7 @@
     "build": "webpack --mode production && npm run build:webview",
     "watch": "webpack --mode development --watch",
     "compile": "tsc && npm run build:webview",
-    "build:webview": "esbuild src/webview/argocd-application/index.tsx --bundle --outfile=media/argocd-application/main.js --format=iife --platform=browser --minify",
+    "build:webview": "esbuild src/webview/argocd-application/index.tsx --bundle --outfile=media/argocd-application/main.js --format=iife --platform=browser --minify && esbuild src/webview/event-viewer/index.tsx --bundle --outfile=media/event-viewer/index.js --format=iife --platform=browser --minify",
     "pretest": "npm run compile && npm run lint",
     "test": "mocha --require source-map-support/register --require out/src/test/setup.js --ui tdd 'out/src/test/**/*.test.js'",
     "pretest:unit": "npm run compile && npm run lint",
@@ -416,6 +416,7 @@
     "@types/node": "^22.0.0",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.18",
+    "@types/react-window": "^1.8.8",
     "@types/uuid": "^10.0.0",
     "@types/vscode": "^1.80.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -429,6 +430,7 @@
     "mocha": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-window": "^1.8.10",
     "semantic-release": "^25.0.2",
     "source-map-support": "^0.5.21",
     "style-loader": "^3.3.3",
